test/fail/classes/invalid_class_prop_name.lily
#[
SyntaxError: Class properties must start with @.
    from invalid_class_prop_name.lily:6:
]#

class ABC { var a: integer }
